# alpaca-mcp-gold

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  IMPLEMENTATION.md  QUICK_START.md  README.md  REAL_WORLD_WORKFLOW_TEST_RESULTS.md  SETUP.md  comprehensive_test.py  main.py  mypy.ini  pyproject.toml  pyproject.toml.production
.claude/commands/: exe-parallel.md  init-parallel.md  prime.md  validate-parallel.md
.github/workflows/: ci.yml
ai_docs/: README.md  alpaca_py_sdk_reference.md  development_guide.md  mcp_server_sdk_reference.md
specs/: architecture_overview.md
src/: __init__.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/config/: __init__.py  settings.py  simple_settings.py
src/mcp_server/models/: __init__.py  alpaca_clients.py  schemas.py
src/mcp_server/prompts/: __init__.py  trading_prompts.py
src/mcp_server/resources/: __init__.py  trading_resources.py
src/mcp_server/tools/: __init__.py  account_tools.py  advanced_analysis_tools.py  custom_strategy_execution.py  execute_custom_analytics_code_tool.py  market_data_tools.py  order_management_tools.py  resource_mirror_tools.py
tests/: __init__.py  conftest.py  test_account_tools.py  test_integration.py  test_order_cleanup.py  test_resource_mirror_tools.py  test_resource_mirrors.py  test_resources.py  test_state_management.py
